set build options temporarily, for my experiments.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ testcode/output/
 platform/*
 .DS_Store
 testcode/testdata/provider/path*
+
+!build/
+build/*
+!build/feature_config.json
+!build/compile_config.json
